Image: Fix images vertical stretching.

--- a/widgets/image/styles/default.less
+++ b/widgets/image/styles/default.less
@@ -11,6 +11,7 @@
 
 .sow-image-container {
 	display: flex;
+	align-items: flex-start;
 	& when( @image_alignment = left ) {
 		justify-content: flex-start;
 	}
